# rust_practice

./: helloworld  main.rs
black/: main.rs
fibo/: Cargo.toml  main.rs
fizz buzz/: Cargo.toml  README.md  fizzbuzz  main.rs
guess number/: Cargo.toml  README.md  fighit  main.rs
helloworld/: Cargo.toml  README.md
isleap/: Cargo.toml  README.md  isleap  main.rs
preme/: README.md  main.rs
prom_check/: Cargo.toml  README.md  preme
verilog_title/: Cargo.toml  main.rs
