[package]
name = "verilog_title"
version = "0.1.0"
authors = ["doodling-airy <thanks_3638@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = { git = "https://github.com/aweinstock314/rust-clipboard" }